<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <TextView
        android:id="@+id/textView"
      android:layout_width="100dp"
      android:layout_height="33dp"
      android:layout_margin="2dp"
      android:text="@string/Angka1"
        android:textSize="22sp"/>

        <EditText
            android:id="@+id/Angka1"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/Angka1"
            android:inputType="numberDecimal"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <TextView
        android:id="@+id/textView2"
      android:layout_width="100dp"
      android:layout_height="33dp"
      android:layout_margin="2dp"
      android:text="@string/Angka2"
        android:textSize="22sp"/>

        <EditText
            android:id="@+id/Angka2"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/Angka2"
            android:inputType="numberDecimal"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <Button
        android:id="@+id/btnTambaH"
      android:layout_width="125dp"
      android:layout_height="wrap_content"
      android:layout_margin="2dp"
      android:text="@string/btnTambaH"
        android:textSize="16sp"
        tools:ignore="ButtonStyle" />

        <Button
        android:id="@+id/btnKuranG"
      android:layout_width="125dp"
      android:layout_height="wrap_content"
      android:layout_margin="2dp"
      android:text="@string/btnKuranG"
        android:textSize="16sp"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
        android:id="@+id/btnKali"
      android:layout_width="125dp"
      android:layout_height="wrap_content"
      android:layout_margin="2dp"
      android:text="@string/btnKali"
        android:textSize="16sp"
            tools:ignore="ButtonStyle" />

        <Button
        android:id="@+id/btnBagi"
      android:layout_width="125dp"
      android:layout_height="wrap_content"
      android:layout_margin="2dp"
      android:text="@string/btnBagi"
        android:textSize="16sp"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="100dp"
            android:layout_height="33dp"
            android:layout_margin="2dp"
            android:text="@string/hasil"
            android:textSize="22sp"/>

        <TextView
            android:id="@+id/hasil"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:text="" />
    </LinearLayout>

  </LinearLayout>